[package]
name = "bnwishlist"
version = "0.1.0"
authors = ["alanmorgan <thefamouseccles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "*"
regex = "*"
reqwest = { version="*", features = ["blocking"]}
scraper = "*"
select = "*"
serde = "*"
serde_derive = "*"
serde_json = "1.0"
