[package]
name = "bnwishlist"
version = "0.1.0"
authors = ["alanmorgan <thefamouseccles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "*"
currency_rs = "1.1.3"
regex = "*"
reqwest = { version="*", features = ["blocking"]}
scraper = "*"
select = "0.6.0"
serde = "*"
serde_derive = "*"
serde_json = "1.0"
